--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,7 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-
-  --animate-border-beam: border-beam calc(var(--duration)*1s) infinite linear;
+  --animate-border-beam: border-beam calc(var(--duration) * 1s) infinite linear;
   --animate-image-glow: image-glow 4100ms 600ms infinite;
   --animate-shimmer: shimmer 2s linear infinite;
 
@@ -84,19 +83,23 @@
     }
   }
 
-  --animate-orbit: orbit calc(var(--duration)*1s) linear infinite;
+  --animate-orbit: orbit calc(var(--duration) * 1s) linear infinite;
 
   @keyframes orbit {
     0% {
-      transform: rotate(calc(var(--angle) * 1deg)) translateY(calc(var(--radius) * 1px)) rotate(calc(var(--angle) * -1deg));
+      transform: rotate(calc(var(--angle) * 1deg))
+        translateY(calc(var(--radius) * 1px)) rotate(calc(var(--angle) * -1deg));
     }
 
     100% {
-      transform: rotate(calc(var(--angle) * 1deg + 360deg)) translateY(calc(var(--radius) * 1px)) rotate(calc((var(--angle) * -1deg) - 360deg));
+      transform: rotate(calc(var(--angle) * 1deg + 360deg))
+        translateY(calc(var(--radius) * 1px))
+        rotate(calc((var(--angle) * -1deg) - 360deg));
     }
   }
 
-  --animate-shimmer-slide: shimmer-slide var(--speed) ease-in-out infinite alternate;
+  --animate-shimmer-slide: shimmer-slide var(--speed) ease-in-out infinite
+    alternate;
   --animate-spin-around: spin-around calc(var(--speed) * 2) infinite linear;
 
   @keyframes shimmer-slide {
@@ -220,8 +223,6 @@
     background-position: -200% 0;
   }
 }
-
-
 
 /* Styling tombol close toaster agar hitam-putih */
 .my-custom-toast [data-close-button] {
